# backend/app.js
@@ -24,6 +24,7 @@ app.use('/auth', require('@routes/auth'));
 app.use('/startups', require('@routes/startup'));
 app.use('/events', require('@routes/event'));
 app.use('/news', require('@routes/news'));
+app.use('/sectors', require('@routes/sector'));
 
 app.get('/', (req, res) => {
     res.send('Hello World !');
